--- a/css/bankactivity.css
+++ b/css/bankactivity.css
@@ -16,6 +16,7 @@ i,em{
 	padding: 0 0.28rem;
 	font-size: 0.3rem;
 	background-color: #343338;
+	position: relative;
 }
 .bank-activity-content span{
 	float: left;
@@ -52,6 +53,15 @@ i,em{
 	padding-left: 0.2rem;
 }
 
+.bank-activity-content em{
+	position: absolute;
+	right: 18px;
+	top:0.26rem;
+	color: #FF942C;
+	font-size: 20px;
+}
+
+
 ::-webkit-input-placeholder { 
     font-size: 0.26rem;
 } 
@@ -76,6 +86,7 @@ i,em{
     font-size: 0.26rem;
     color: #666;
 }
+
 .bank-type-select span{
 	display: block;
 	height: 100%;
@@ -298,11 +309,8 @@ i,em{
 	text-align: left;
 	position: relative;
 	height: 350px;
-	overflow-y: scroll;
 }
 .bank-rule-content{
-	height: auto;
-	
 }
 .bank-rule-tips{
 	text-indent: 2em;
@@ -323,4 +331,95 @@ i,em{
 	position: absolute;
 	top: 9px;
 	left: 0;
+}
+
+
+.alerttips{
+	display: none;
+	position: fixed;
+    z-index: 10000;
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+    width: 90%;
+    -webkit-transition-property: -webkit-transform,opacity;
+    transition-property: transform,opacity;
+    -webkit-transform: translate3d(-50%,-50%,0);
+    transform: translate3d(-50%,-50%,0);
+    text-align: center;
+    opacity: 1;
+    color: #000;
+    border-radius: 13px;
+}
+
+.alert-title:before ,.alert-title:after{
+	content: '';
+	display: inline-block;
+	height: 1px; 
+	width: 30px;
+	background-color:#c8c8c8;
+	margin: 0 8px;
+	vertical-align: middle;
+}
+
+.alert-inner{
+	position: relative;
+    padding: 15px;
+    border-radius: 13px 13px 0 0;
+    background: rgba(255,255,255,.95);
+    text-align: left;
+}
+.alert-title{
+	color: #4b92e2;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+}
+.alert-text{
+	font-family: inherit;
+    font-size: 14px;
+    margin: 5px 0 0;
+    height: 350px;
+    overflow-y: scroll;
+}
+.alert-text i {
+    color: #4b92e2;
+}
+
+.alert-buttons {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    height: 65px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    background-color: rgba(255,255,255,.95);
+}
+.alert-button{
+	display: block;
+	box-sizing: border-box;
+	width: 50%;
+	height: 35px;
+	line-height: 35px;
+	margin: 10px auto;
+	background-color: #4B92E2;
+	color: #fff;
+	border-radius: 3px;
+	font-size: 15px;
+}
+
+.alert-backdrop{
+	display: none;
+	position: fixed;
+    z-index: 998;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    -webkit-transition-duration: 400ms;
+    transition-duration: 400ms;
+    opacity: 1;
+    background: rgba(0,0,0,.4);
 }
