CCB-96 【商户搜索】商户搜索结果和点击后进入首页显示结果数量不一致

--- a/css/mui.indexedlist.css
+++ b/css/mui.indexedlist.css
@@ -53,12 +53,13 @@
 	padding-bottom: 3px;
 }
 .mui-indexed-list-search {
-    background-color: #343338;
+    background-color: #4a92e2;
     padding: 8px 12px 12px 12px;
 	z-index: 15;
 }
 .mui-indexed-list-search.mui-input-row.mui-search{
-    padding-left: 65px;
+    padding-left: 45px;
+    height: 0.95rem;
 }
 
 
@@ -69,25 +70,33 @@
 .mui-indexed-list-search input {
 	border-radius: 4px;
 	margin: 0px;
-	background-color: #E8E8E8;
+	background-color: #fff;
+	height: 0.65rem;
+	padding-top: 0.1.5rem ;
+	padding-bottom: 0.1.5rem ;
+	font-size: 0.3rem;
 }
 
-.mui-indexed-list-search .mui-icon{
-	color: #fff;
-	font-size: 15px;
-
+.mui-indexed-list-search .bank-icon{
+	display: block;
+	border: 0.01rem solid #fff;
+    border-radius: 50%;
+    line-height: 0.95rem;
+    height: 0.5rem;
+    width: 0.5rem;
+    padding: 0.1rem;
+    background: url(../img/icon_arrow.png) center center no-repeat;
+    background-size: 80% 80%;
+    position: absolute;
+    top: 0.24rem;
+    left:12px;
 }
 
-.mui-indexed-list-search .mui-icon.mui-action-back{
-	position: absolute;
-    top: 19px;
-    left: 8px;
-}
 
 .mui-search .mui-placeholder{
-	line-height: 52px;
-	height: 52px;
-	margin-left: 56px;
+	line-height:1.09rem;;	
+	height: 0.95rem;
+	margin-left: 40px;
 	font-size: 13px;
 }
 
@@ -185,13 +194,16 @@
 	height: 0;
 }
 .mui-indexed-list-search.mui-search.mui-active:before{
-	left: 70px;
-	top:47%;
+	left: 50px;
+	top:52%;
 }
 .mui-input-row.mui-search .mui-icon-clear{
-	top: 15px;
-    right: 20px;
+	top: 0.3rem;
+    right: 18px;
     color: #FF942C;
+    font-size: 0.4rem;
+    width: auto;
+    height: auto;
 }
 .mui-bg-f7{
 	background-color: #f7f7f7;
