--- a/css/bankactivity.css
+++ b/css/bankactivity.css
@@ -15,7 +15,7 @@ i,em{
 	box-sizing: border-box;
 	padding: 0 0.28rem;
 	font-size: 0.3rem;
-	background-color: #343338;
+	background-color: #4a92e2;
 	position: relative;
 }
 .bank-activity-content span{
@@ -46,7 +46,6 @@ i,em{
 	float: left;
 	max-width: 80%;
 	height: 0.65rem;
-	line-height: 0.65rem;
 	margin: 0.17rem 0 ;
 	border: none;
 	font-size: 0.3rem;
@@ -54,11 +53,11 @@ i,em{
 }
 
 .bank-activity-content em{
-	position: absolute;
-	right: 18px;
-	top:0.26rem;
-	color: #FF942C;
-	font-size: 20px;
+    position: absolute;
+    right: 18px;
+    top: 0.3rem;
+    color: #FF942C;
+    font-size: 0.4rem;
 }
 
 
@@ -211,6 +210,10 @@ i,em{
 	
 }
 
+.bank-content-right span.bank-hidden,.bank-content-right span.bank-hidden i{
+	color: transparent;
+}
+
 .bank-activity-footer{
 	width: 100%;
 	height: 1rem;
@@ -246,6 +249,7 @@ i,em{
 	flex: 2;
 	background-color: #fff;
 	margin-left: 0.28rem;
+	color: #4A92E3;
 }
 
 
@@ -265,12 +269,31 @@ i,em{
 	box-sizing: border-box;
 	padding: 0 0.28rem;
 	font-size: 0.3rem;
-	background-color: #343338;
+	background-color: #4a92e2;
+}
+
+.bank-activity-content span.bank-icon-arrowleft{	
+	border: 0.01rem solid #fff;
+    border-radius: 50%;
+    line-height: 0.95rem;
+    height: 0.5rem;
+    width: 0.5rem;
+    padding: 0.1rem;
+    margin-top: 0.23rem;
+    background: url(../img/icon_arrow.png) center center no-repeat;
+    background-size: 80% 80%;
+}
+.bank-activity-content #searchShopTxt{
+	float: right;
+	max-width: 90%
 }
 
 #SearchList .mui-table-view .mui-table-view-cell{
 	font-size: 0.3rem;
 	color: #777;
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 #SearchList .mui-table-view .mui-table-view-cell span{
 	font-size: 0.22rem;
