CCB-102 【商户搜索】商户没有搜索到数据，进入首页后，搜索信息没有清空 CCB-103 【城市搜索】城市名超过3个字显示不全

--- a/css/bankactivity.css
+++ b/css/bankactivity.css
@@ -185,6 +185,7 @@ i,em{
 .bank-shop-list .mui-media-body{
 	width: 83%;
 	font-size: 0.3rem;
+	text-overflow: ellipsis;
 }
 
 .bank-shop-list .mui-media-body p{
