CCB-109【首页】商户搜索后，切换全部分类，错误

--- a/css/bankactivity.css
+++ b/css/bankactivity.css
@@ -25,6 +25,7 @@ i,em{
 
 .bank-activity #setting .bank-activity-head .bank-activity-content a:last-child{
 	flex: 1;
+	-webkit-flex:1;
 }
 
 .bank-activity #setting .bank-activity-head .bank-activity-content{
