--- a/css/bankactivity.css
+++ b/css/bankactivity.css
@@ -35,7 +35,7 @@ i,em{
 
 .bank-activity #setting #AddressTxt{
 	width: auto;
-	max-width: 81px;
+	max-width: 2rem;
 }
 
 .bank-activity #setting .bank-activity-content input.bank-activity-txtsearch{
@@ -140,10 +140,10 @@ i,em{
 .bank-type-select .mui-scroll-wrapper{
 	top:0.70rem;
 	z-index: 20;
-	height: auto;
 	background-color: #fff;
 	border-radius: 0 0 7px 7px ;
-	height: 3.2rem;
+	min-height: 0.7rem;
+	max-height: 3.2rem;
 	border: 1px solid #f7f7f7;
 	box-shadow: 1px 2px 10px #efefef;
 }
