--- a/css/bankactivity.css
+++ b/css/bankactivity.css
@@ -41,6 +41,7 @@ i,em{
 .bank-activity #setting .bank-activity-content input.bank-activity-txtsearch{
 	width: 100%;
 	max-width: none;
+	color: #999;
 }
 
 .bank-activity-content span{
@@ -299,7 +300,7 @@ i,em{
 }
 
 .bank-activity-content span.bank-icon-arrowleft{	
-	border: 0.01rem solid #fff;
+	border: 1px solid #fff;
     border-radius: 50%;
     line-height: 0.95rem;
     height: 0.5rem;
@@ -383,7 +384,7 @@ i,em{
 }
 
 
-.alerttips{
+.alerttips,.loading{
 	display: none;
 	position: absolute;
     z-index: 20001;
@@ -400,6 +401,35 @@ i,em{
     color: #000;
     border-radius: 13px;
 }
+
+.loading span{
+	display: block;
+	width: 1.5rem;
+	height: 1.5rem;
+	animation: myfirst 1.5s linear infinite normal;
+	-webkit-animation: myfirst 1.5s linear infinite normal;
+	margin: auto;
+}
+.loading span img{
+	width: 100%;
+	height: auto;
+}
+
+@keyframes myfirst
+{
+0%   {transform:rotate(0deg);-webkit-transform:rotate(0deg);}
+50%  {transform:rotate(180deg);-webkit-transform:rotate(180deg);}
+100% {transform:rotate(360deg);-webkit-transform:rotate(360deg);}
+}
+
+@-webkit-keyframes myfirst /* Safari and Chrome */
+{
+0%   {transform:rotate(0deg);-webkit-transform:rotate(0deg);}
+50%  {transform:rotate(180deg);-webkit-transform:rotate(180deg);}
+100% {transform:rotate(360deg);-webkit-transform:rotate(360deg);}
+}
+
+
 
 .alert-title:before ,.alert-title:after{
 	content: '';
