CCB-120 【输入框】华为：搜索输入狂内‘x’按钮覆盖了文字

--- a/css/bankactivity.css
+++ b/css/bankactivity.css
@@ -312,7 +312,8 @@ i,em{
 }
 .bank-activity-content #searchShopTxt{
 	float: right;
-	max-width: 90%
+	max-width: 90%;
+	padding-right: 30px;
 }
 
 #SearchList .mui-table-view .mui-table-view-cell{
